supports value factors [value.py]

--- a/tests/tushare_test.ipynb
+++ b/tests/tushare_test.ipynb
@@ -2205,12 +2205,471 @@
    "execution_count": 7
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-12T08:57:22.073233Z",
+     "start_time": "2025-08-12T08:57:21.803192Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "code='000001.SZ'\n",
+    "start_date='20200806'\n",
+    "end_date='20250806'\n",
+    "df = pro.daily_basic(ts_code=code, start_date=start_date, end_date=end_date,\n",
+    "                     fields=['ts_code', 'trade_date', 'total_mv', 'pe_ttm', 'pb', 'ps_ttm', 'dv_ttm'])"
+   ],
+   "id": "3cdbd83d8e596049",
+   "outputs": [],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-12T08:57:28.106596Z",
+     "start_time": "2025-08-12T08:57:28.100557Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df",
+   "id": "3df71fd83ecc8dd6",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "        ts_code trade_date      total_mv  pe_ttm      pb  ps_ttm  dv_ttm\n",
+       "0     000001.SZ   20250806  2.417977e+07  5.5367  0.5635  1.7072  4.8796\n",
+       "1     000001.SZ   20250805  2.419918e+07  5.5411  0.5639  1.7086  4.8757\n",
+       "2     000001.SZ   20250804  2.386928e+07  5.4656  0.5562  1.6853  4.9431\n",
+       "3     000001.SZ   20250801  2.383047e+07  5.4567  0.5553  1.6825  4.9512\n",
+       "4     000001.SZ   20250731  2.373344e+07  5.4345  0.5531  1.6757  4.9714\n",
+       "...         ...        ...           ...     ...     ...     ...     ...\n",
+       "1208  000001.SZ   20200812  2.790571e+07  9.5251  1.0032  1.9459  1.5160\n",
+       "1209  000001.SZ   20200811  2.742056e+07  9.3595  0.9857  1.9121  1.5428\n",
+       "1210  000001.SZ   20200810  2.707126e+07  9.2403  0.9732  1.8877  1.5627\n",
+       "1211  000001.SZ   20200807  2.658611e+07  9.0747  0.9557  1.8539  1.5912\n",
+       "1212  000001.SZ   20200806  2.697423e+07  9.2072  0.9697  1.8809  1.5683\n",
+       "\n",
+       "[1213 rows x 7 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ts_code</th>\n",
+       "      <th>trade_date</th>\n",
+       "      <th>total_mv</th>\n",
+       "      <th>pe_ttm</th>\n",
+       "      <th>pb</th>\n",
+       "      <th>ps_ttm</th>\n",
+       "      <th>dv_ttm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20250806</td>\n",
+       "      <td>2.417977e+07</td>\n",
+       "      <td>5.5367</td>\n",
+       "      <td>0.5635</td>\n",
+       "      <td>1.7072</td>\n",
+       "      <td>4.8796</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20250805</td>\n",
+       "      <td>2.419918e+07</td>\n",
+       "      <td>5.5411</td>\n",
+       "      <td>0.5639</td>\n",
+       "      <td>1.7086</td>\n",
+       "      <td>4.8757</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20250804</td>\n",
+       "      <td>2.386928e+07</td>\n",
+       "      <td>5.4656</td>\n",
+       "      <td>0.5562</td>\n",
+       "      <td>1.6853</td>\n",
+       "      <td>4.9431</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20250801</td>\n",
+       "      <td>2.383047e+07</td>\n",
+       "      <td>5.4567</td>\n",
+       "      <td>0.5553</td>\n",
+       "      <td>1.6825</td>\n",
+       "      <td>4.9512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20250731</td>\n",
+       "      <td>2.373344e+07</td>\n",
+       "      <td>5.4345</td>\n",
+       "      <td>0.5531</td>\n",
+       "      <td>1.6757</td>\n",
+       "      <td>4.9714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1208</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20200812</td>\n",
+       "      <td>2.790571e+07</td>\n",
+       "      <td>9.5251</td>\n",
+       "      <td>1.0032</td>\n",
+       "      <td>1.9459</td>\n",
+       "      <td>1.5160</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1209</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20200811</td>\n",
+       "      <td>2.742056e+07</td>\n",
+       "      <td>9.3595</td>\n",
+       "      <td>0.9857</td>\n",
+       "      <td>1.9121</td>\n",
+       "      <td>1.5428</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1210</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20200810</td>\n",
+       "      <td>2.707126e+07</td>\n",
+       "      <td>9.2403</td>\n",
+       "      <td>0.9732</td>\n",
+       "      <td>1.8877</td>\n",
+       "      <td>1.5627</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1211</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20200807</td>\n",
+       "      <td>2.658611e+07</td>\n",
+       "      <td>9.0747</td>\n",
+       "      <td>0.9557</td>\n",
+       "      <td>1.8539</td>\n",
+       "      <td>1.5912</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1212</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20200806</td>\n",
+       "      <td>2.697423e+07</td>\n",
+       "      <td>9.2072</td>\n",
+       "      <td>0.9697</td>\n",
+       "      <td>1.8809</td>\n",
+       "      <td>1.5683</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1213 rows × 7 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 9
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "3cdbd83d8e596049"
+   "id": "5d3a3449c70d2d62"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-12T09:26:49.401779Z",
+     "start_time": "2025-08-12T09:26:49.000555Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "pro.fina_indicator(ts_code=code, start_date=start_date,\n",
+    "                                    fields='ts_code,end_date,ebitda')"
+   ],
+   "id": "bf6192e10c4e9fa3",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "      ts_code  end_date ebitda\n",
+       "0   000001.SZ  20250331   None\n",
+       "1   000001.SZ  20250331   None\n",
+       "2   000001.SZ  20241231   None\n",
+       "3   000001.SZ  20240930   None\n",
+       "4   000001.SZ  20240630   None\n",
+       "5   000001.SZ  20240630   None\n",
+       "6   000001.SZ  20240331   None\n",
+       "7   000001.SZ  20231231   None\n",
+       "8   000001.SZ  20230930   None\n",
+       "9   000001.SZ  20230630   None\n",
+       "10  000001.SZ  20230331   None\n",
+       "11  000001.SZ  20230331   None\n",
+       "12  000001.SZ  20221231   None\n",
+       "13  000001.SZ  20221231   None\n",
+       "14  000001.SZ  20220930   None\n",
+       "15  000001.SZ  20220930   None\n",
+       "16  000001.SZ  20220630   None\n",
+       "17  000001.SZ  20220630   None\n",
+       "18  000001.SZ  20220331   None\n",
+       "19  000001.SZ  20220331   None\n",
+       "20  000001.SZ  20211231   None\n",
+       "21  000001.SZ  20211231   None\n",
+       "22  000001.SZ  20210930   None\n",
+       "23  000001.SZ  20210630   None\n",
+       "24  000001.SZ  20210630   None\n",
+       "25  000001.SZ  20210331   None\n",
+       "26  000001.SZ  20201231   None\n",
+       "27  000001.SZ  20201231   None\n",
+       "28  000001.SZ  20200930   None"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ts_code</th>\n",
+       "      <th>end_date</th>\n",
+       "      <th>ebitda</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20250331</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20250331</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20241231</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20240930</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20240630</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20240630</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20240331</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20231231</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20230930</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20230630</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20230331</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20230331</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20221231</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20221231</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20220930</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20220930</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20220630</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20220630</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20220331</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20220331</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20211231</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20211231</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20210930</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20210630</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20210630</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20210331</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20201231</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20201231</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20200930</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 10
   }
  ],
  "metadata": {
