--- a/tests/tushare_test.ipynb
+++ b/tests/tushare_test.ipynb
@@ -1837,8 +1837,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-13T01:36:44.150670Z",
-     "start_time": "2025-08-13T01:36:43.464554Z"
+     "end_time": "2025-08-13T07:55:42.283867Z",
+     "start_time": "2025-08-13T07:55:41.715317Z"
     }
    },
    "cell_type": "code",
@@ -3811,12 +3811,420 @@
    "execution_count": 38
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-13T09:35:06.668987Z",
+     "start_time": "2025-08-13T09:35:06.496086Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "income = pro.income(ts_code=\"000001.SZ\",\n",
+    "           fields=\"ts_code,ann_date,end_date,revenue,total_revenue,n_income,oper_cost\"\n",
+    "           )"
+   ],
+   "id": "de19e7ea5fbcfcf5",
+   "outputs": [],
+   "execution_count": 26
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-13T09:35:09.398508Z",
+     "start_time": "2025-08-13T09:35:09.391667Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "income",
+   "id": "34581f37f6baed7a",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "       ts_code  ann_date  end_date       revenue  total_revenue      n_income  \\\n",
+       "0    000001.SZ  20250419  20250331  3.370900e+10   3.370900e+10  1.409600e+10   \n",
+       "1    000001.SZ  20250315  20241231  1.466950e+11   1.466950e+11  4.450800e+10   \n",
+       "2    000001.SZ  20241019  20240930  1.115820e+11   1.115820e+11  3.972900e+10   \n",
+       "3    000001.SZ  20240816  20240630  7.713200e+10   7.713200e+10  2.587900e+10   \n",
+       "4    000001.SZ  20240420  20240331  3.877000e+10   3.877000e+10  1.493200e+10   \n",
+       "..         ...       ...       ...           ...            ...           ...   \n",
+       "118  000001.SZ  19970421  19961231  1.560670e+09   1.560670e+09  7.873006e+08   \n",
+       "119  000001.SZ  19960829  19960630  1.144943e+09   1.144943e+09  3.641234e+08   \n",
+       "120  000001.SZ  19960209  19951231  9.802463e+08   9.802463e+08  4.350597e+08   \n",
+       "121  000001.SZ  19950811  19950630  8.424990e+08   8.424990e+08  2.165011e+08   \n",
+       "122  000001.SZ  19950310  19941231  7.404704e+08   7.404704e+08  3.563280e+08   \n",
+       "\n",
+       "     oper_cost  \n",
+       "0          NaN  \n",
+       "1          NaN  \n",
+       "2          NaN  \n",
+       "3          NaN  \n",
+       "4          NaN  \n",
+       "..         ...  \n",
+       "118        NaN  \n",
+       "119        NaN  \n",
+       "120        NaN  \n",
+       "121        NaN  \n",
+       "122        NaN  \n",
+       "\n",
+       "[123 rows x 7 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ts_code</th>\n",
+       "      <th>ann_date</th>\n",
+       "      <th>end_date</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>total_revenue</th>\n",
+       "      <th>n_income</th>\n",
+       "      <th>oper_cost</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20250419</td>\n",
+       "      <td>20250331</td>\n",
+       "      <td>3.370900e+10</td>\n",
+       "      <td>3.370900e+10</td>\n",
+       "      <td>1.409600e+10</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20250315</td>\n",
+       "      <td>20241231</td>\n",
+       "      <td>1.466950e+11</td>\n",
+       "      <td>1.466950e+11</td>\n",
+       "      <td>4.450800e+10</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20241019</td>\n",
+       "      <td>20240930</td>\n",
+       "      <td>1.115820e+11</td>\n",
+       "      <td>1.115820e+11</td>\n",
+       "      <td>3.972900e+10</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20240816</td>\n",
+       "      <td>20240630</td>\n",
+       "      <td>7.713200e+10</td>\n",
+       "      <td>7.713200e+10</td>\n",
+       "      <td>2.587900e+10</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20240420</td>\n",
+       "      <td>20240331</td>\n",
+       "      <td>3.877000e+10</td>\n",
+       "      <td>3.877000e+10</td>\n",
+       "      <td>1.493200e+10</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>118</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>19970421</td>\n",
+       "      <td>19961231</td>\n",
+       "      <td>1.560670e+09</td>\n",
+       "      <td>1.560670e+09</td>\n",
+       "      <td>7.873006e+08</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>19960829</td>\n",
+       "      <td>19960630</td>\n",
+       "      <td>1.144943e+09</td>\n",
+       "      <td>1.144943e+09</td>\n",
+       "      <td>3.641234e+08</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>19960209</td>\n",
+       "      <td>19951231</td>\n",
+       "      <td>9.802463e+08</td>\n",
+       "      <td>9.802463e+08</td>\n",
+       "      <td>4.350597e+08</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>19950811</td>\n",
+       "      <td>19950630</td>\n",
+       "      <td>8.424990e+08</td>\n",
+       "      <td>8.424990e+08</td>\n",
+       "      <td>2.165011e+08</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>19950310</td>\n",
+       "      <td>19941231</td>\n",
+       "      <td>7.404704e+08</td>\n",
+       "      <td>7.404704e+08</td>\n",
+       "      <td>3.563280e+08</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>123 rows × 7 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 27
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-13T08:55:38.359404Z",
+     "start_time": "2025-08-13T08:55:38.351791Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "income['gross_profit'] = income['revenue'] - income['oper_cost']\n",
+    "income"
+   ],
+   "id": "7d698c53232dbd27",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "       ts_code  end_date       revenue  total_revenue      n_income  \\\n",
+       "0    000001.SZ  20250331  3.370900e+10   3.370900e+10  1.409600e+10   \n",
+       "1    000001.SZ  20241231  1.466950e+11   1.466950e+11  4.450800e+10   \n",
+       "2    000001.SZ  20240930  1.115820e+11   1.115820e+11  3.972900e+10   \n",
+       "3    000001.SZ  20240630  7.713200e+10   7.713200e+10  2.587900e+10   \n",
+       "4    000001.SZ  20240331  3.877000e+10   3.877000e+10  1.493200e+10   \n",
+       "..         ...       ...           ...            ...           ...   \n",
+       "118  000001.SZ  19961231  1.560670e+09   1.560670e+09  7.873006e+08   \n",
+       "119  000001.SZ  19960630  1.144943e+09   1.144943e+09  3.641234e+08   \n",
+       "120  000001.SZ  19951231  9.802463e+08   9.802463e+08  4.350597e+08   \n",
+       "121  000001.SZ  19950630  8.424990e+08   8.424990e+08  2.165011e+08   \n",
+       "122  000001.SZ  19941231  7.404704e+08   7.404704e+08  3.563280e+08   \n",
+       "\n",
+       "     oper_cost  gross_profit  \n",
+       "0          0.0  3.370900e+10  \n",
+       "1          0.0  1.466950e+11  \n",
+       "2          0.0  1.115820e+11  \n",
+       "3          0.0  7.713200e+10  \n",
+       "4          0.0  3.877000e+10  \n",
+       "..         ...           ...  \n",
+       "118        0.0  1.560670e+09  \n",
+       "119        0.0  1.144943e+09  \n",
+       "120        0.0  9.802463e+08  \n",
+       "121        0.0  8.424990e+08  \n",
+       "122        0.0  7.404704e+08  \n",
+       "\n",
+       "[123 rows x 7 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ts_code</th>\n",
+       "      <th>end_date</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>total_revenue</th>\n",
+       "      <th>n_income</th>\n",
+       "      <th>oper_cost</th>\n",
+       "      <th>gross_profit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20250331</td>\n",
+       "      <td>3.370900e+10</td>\n",
+       "      <td>3.370900e+10</td>\n",
+       "      <td>1.409600e+10</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.370900e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20241231</td>\n",
+       "      <td>1.466950e+11</td>\n",
+       "      <td>1.466950e+11</td>\n",
+       "      <td>4.450800e+10</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.466950e+11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20240930</td>\n",
+       "      <td>1.115820e+11</td>\n",
+       "      <td>1.115820e+11</td>\n",
+       "      <td>3.972900e+10</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.115820e+11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20240630</td>\n",
+       "      <td>7.713200e+10</td>\n",
+       "      <td>7.713200e+10</td>\n",
+       "      <td>2.587900e+10</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.713200e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20240331</td>\n",
+       "      <td>3.877000e+10</td>\n",
+       "      <td>3.877000e+10</td>\n",
+       "      <td>1.493200e+10</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.877000e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>118</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>19961231</td>\n",
+       "      <td>1.560670e+09</td>\n",
+       "      <td>1.560670e+09</td>\n",
+       "      <td>7.873006e+08</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.560670e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>19960630</td>\n",
+       "      <td>1.144943e+09</td>\n",
+       "      <td>1.144943e+09</td>\n",
+       "      <td>3.641234e+08</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.144943e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>19951231</td>\n",
+       "      <td>9.802463e+08</td>\n",
+       "      <td>9.802463e+08</td>\n",
+       "      <td>4.350597e+08</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.802463e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>19950630</td>\n",
+       "      <td>8.424990e+08</td>\n",
+       "      <td>8.424990e+08</td>\n",
+       "      <td>2.165011e+08</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.424990e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>19941231</td>\n",
+       "      <td>7.404704e+08</td>\n",
+       "      <td>7.404704e+08</td>\n",
+       "      <td>3.563280e+08</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.404704e+08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>123 rows × 7 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 23
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "de19e7ea5fbcfcf5"
+   "id": "3a8acd16a4ede377"
   }
  ],
  "metadata": {
