supports quality factor [quality.py]

--- a/tests/tushare_test.ipynb
+++ b/tests/tushare_test.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-08-12T03:26:52.021557Z",
-     "start_time": "2025-08-12T03:26:50.230980Z"
+     "end_time": "2025-08-14T06:42:43.210442Z",
+     "start_time": "2025-08-14T06:42:41.652290Z"
     }
    },
    "source": [
@@ -20,16 +20,7 @@
     "pro = ts.pro_api()\n",
     "df = ts.pro_bar(ts_code='873001.bj', start_date='20200806', end_date='20250806', adj='cq')"
    ],
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\31021\\anaconda3\\envs\\tushare_3.11\\Lib\\site-packages\\tushare\\pro\\data_pro.py:130: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
-      "  data['adj_factor'] = data['adj_factor'].fillna(method='bfill')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "execution_count": 1
   },
   {
@@ -4219,12 +4210,403 @@
    "execution_count": 23
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-14T06:46:07.758952Z",
+     "start_time": "2025-08-14T06:46:06.469124Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "3a8acd16a4ede377"
+   "source": "pro.index_weight(index_code='000300.SH', trade_date='20250801')",
+   "id": "3a8acd16a4ede377",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "    index_code   con_code trade_date  weight\n",
+       "0    000300.SH  600519.SH   20250801  4.1366\n",
+       "1    000300.SH  300750.SZ   20250801  3.2304\n",
+       "2    000300.SH  601318.SH   20250801  2.9113\n",
+       "3    000300.SH  600036.SH   20250801  2.5554\n",
+       "4    000300.SH  601166.SH   20250801  1.7403\n",
+       "..         ...        ...        ...     ...\n",
+       "295  000300.SH  300979.SZ   20250801  0.0367\n",
+       "296  000300.SH  600377.SH   20250801  0.0327\n",
+       "297  000300.SH  000800.SZ   20250801  0.0319\n",
+       "298  000300.SH  001391.SZ   20250801  0.0268\n",
+       "299  000300.SH  001289.SZ   20250801  0.0115\n",
+       "\n",
+       "[300 rows x 4 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index_code</th>\n",
+       "      <th>con_code</th>\n",
+       "      <th>trade_date</th>\n",
+       "      <th>weight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>000300.SH</td>\n",
+       "      <td>600519.SH</td>\n",
+       "      <td>20250801</td>\n",
+       "      <td>4.1366</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>000300.SH</td>\n",
+       "      <td>300750.SZ</td>\n",
+       "      <td>20250801</td>\n",
+       "      <td>3.2304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>000300.SH</td>\n",
+       "      <td>601318.SH</td>\n",
+       "      <td>20250801</td>\n",
+       "      <td>2.9113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>000300.SH</td>\n",
+       "      <td>600036.SH</td>\n",
+       "      <td>20250801</td>\n",
+       "      <td>2.5554</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>000300.SH</td>\n",
+       "      <td>601166.SH</td>\n",
+       "      <td>20250801</td>\n",
+       "      <td>1.7403</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>295</th>\n",
+       "      <td>000300.SH</td>\n",
+       "      <td>300979.SZ</td>\n",
+       "      <td>20250801</td>\n",
+       "      <td>0.0367</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>296</th>\n",
+       "      <td>000300.SH</td>\n",
+       "      <td>600377.SH</td>\n",
+       "      <td>20250801</td>\n",
+       "      <td>0.0327</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>297</th>\n",
+       "      <td>000300.SH</td>\n",
+       "      <td>000800.SZ</td>\n",
+       "      <td>20250801</td>\n",
+       "      <td>0.0319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>298</th>\n",
+       "      <td>000300.SH</td>\n",
+       "      <td>001391.SZ</td>\n",
+       "      <td>20250801</td>\n",
+       "      <td>0.0268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>299</th>\n",
+       "      <td>000300.SH</td>\n",
+       "      <td>001289.SZ</td>\n",
+       "      <td>20250801</td>\n",
+       "      <td>0.0115</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>300 rows × 4 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-14T07:29:15.119688Z",
+     "start_time": "2025-08-14T07:29:14.866107Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "pro.balancesheet(\n",
+    "                ts_code='000001.SZ',\n",
+    "                start_date='20230630',\n",
+    "                end_date='20240601'\n",
+    "            )"
+   ],
+   "id": "935bb5d7a612faee",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "     ts_code  ann_date f_ann_date  end_date report_type comp_type end_type  \\\n",
+       "0  000001.SZ  20240420   20240420  20240331           1         2        1   \n",
+       "1  000001.SZ  20240420   20240420  20240331           1         2        1   \n",
+       "2  000001.SZ  20240315   20240315  20231231           1         2        4   \n",
+       "3  000001.SZ  20240315   20240315  20231231           1         2        4   \n",
+       "4  000001.SZ  20231025   20231025  20230930           1         2        3   \n",
+       "5  000001.SZ  20230824   20230824  20230630           1         2        2   \n",
+       "\n",
+       "    total_share      cap_rese  undistr_porfit  ...  accounts_receiv_bill  \\\n",
+       "0  1.940600e+10  8.076100e+10    2.340270e+11  ...                  None   \n",
+       "1  1.940592e+10  8.076100e+10    2.340270e+11  ...                  None   \n",
+       "2  1.940592e+10  8.076100e+10    2.212550e+11  ...                  None   \n",
+       "3  1.940600e+10  8.076100e+10    2.212550e+11  ...                  None   \n",
+       "4  1.940592e+10  8.075900e+10    2.182460e+11  ...                  None   \n",
+       "5  1.940592e+10  8.075700e+10    2.040540e+11  ...                  None   \n",
+       "\n",
+       "  accounts_pay oth_rcv_total  fix_assets_total cip_total oth_pay_total  \\\n",
+       "0         None          None              None      None          None   \n",
+       "1         None          None              None      None          None   \n",
+       "2         None          None              None      None          None   \n",
+       "3         None          None              None      None          None   \n",
+       "4         None          None              None      None          None   \n",
+       "5         None          None              None      None          None   \n",
+       "\n",
+       "  long_pay_total   debt_invest oth_debt_invest update_flag  \n",
+       "0           None  7.921670e+11    1.601500e+11           0  \n",
+       "1           None  7.921670e+11    1.601500e+11           1  \n",
+       "2           None  7.724670e+11    1.619310e+11           1  \n",
+       "3           None  7.724670e+11    1.619310e+11           0  \n",
+       "4           None  7.456610e+11    1.418390e+11           1  \n",
+       "5           None  7.403970e+11    1.505110e+11           1  \n",
+       "\n",
+       "[6 rows x 152 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ts_code</th>\n",
+       "      <th>ann_date</th>\n",
+       "      <th>f_ann_date</th>\n",
+       "      <th>end_date</th>\n",
+       "      <th>report_type</th>\n",
+       "      <th>comp_type</th>\n",
+       "      <th>end_type</th>\n",
+       "      <th>total_share</th>\n",
+       "      <th>cap_rese</th>\n",
+       "      <th>undistr_porfit</th>\n",
+       "      <th>...</th>\n",
+       "      <th>accounts_receiv_bill</th>\n",
+       "      <th>accounts_pay</th>\n",
+       "      <th>oth_rcv_total</th>\n",
+       "      <th>fix_assets_total</th>\n",
+       "      <th>cip_total</th>\n",
+       "      <th>oth_pay_total</th>\n",
+       "      <th>long_pay_total</th>\n",
+       "      <th>debt_invest</th>\n",
+       "      <th>oth_debt_invest</th>\n",
+       "      <th>update_flag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20240420</td>\n",
+       "      <td>20240420</td>\n",
+       "      <td>20240331</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.940600e+10</td>\n",
+       "      <td>8.076100e+10</td>\n",
+       "      <td>2.340270e+11</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>7.921670e+11</td>\n",
+       "      <td>1.601500e+11</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20240420</td>\n",
+       "      <td>20240420</td>\n",
+       "      <td>20240331</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.940592e+10</td>\n",
+       "      <td>8.076100e+10</td>\n",
+       "      <td>2.340270e+11</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>7.921670e+11</td>\n",
+       "      <td>1.601500e+11</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20240315</td>\n",
+       "      <td>20240315</td>\n",
+       "      <td>20231231</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.940592e+10</td>\n",
+       "      <td>8.076100e+10</td>\n",
+       "      <td>2.212550e+11</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>7.724670e+11</td>\n",
+       "      <td>1.619310e+11</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20240315</td>\n",
+       "      <td>20240315</td>\n",
+       "      <td>20231231</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.940600e+10</td>\n",
+       "      <td>8.076100e+10</td>\n",
+       "      <td>2.212550e+11</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>7.724670e+11</td>\n",
+       "      <td>1.619310e+11</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20231025</td>\n",
+       "      <td>20231025</td>\n",
+       "      <td>20230930</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.940592e+10</td>\n",
+       "      <td>8.075900e+10</td>\n",
+       "      <td>2.182460e+11</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>7.456610e+11</td>\n",
+       "      <td>1.418390e+11</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20230824</td>\n",
+       "      <td>20230824</td>\n",
+       "      <td>20230630</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.940592e+10</td>\n",
+       "      <td>8.075700e+10</td>\n",
+       "      <td>2.040540e+11</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>7.403970e+11</td>\n",
+       "      <td>1.505110e+11</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6 rows × 152 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 9
   }
  ],
  "metadata": {
