[Temp Update] adds factor process methods

--- a/tests/sw_index_test.ipynb
+++ b/tests/sw_index_test.ipynb
@@ -980,6 +980,155 @@
     }
    ],
    "execution_count": 36
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T02:51:33.642503Z",
+     "start_time": "2025-08-20T02:51:32.964991Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from utils.utils import easyPro, easyConnect\n",
+    "pro = easyPro()"
+   ],
+   "id": "c5da83744bd15ba3",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001B[32m08-20 10:51:33\u001B[0m | \u001B[1mINFO   \u001B[0m | \u001B[36mutils.logger_config\u001B[0m:\u001B[36m_setup_logger\u001B[0m | \u001B[1m📝 日志系统启动成功\u001B[0m\n",
+      "\u001B[32m08-20 10:51:33\u001B[0m | \u001B[1mINFO   \u001B[0m | \u001B[36mutils.logger_config\u001B[0m:\u001B[36m_setup_logger\u001B[0m | \u001B[1m📁 主日志文件: C:\\Users\\31021\\Desktop\\Quantitative_Trading\\Coding\\Get_Stock_Infos\\logs\\20250820-1.log\u001B[0m\n",
+      "\u001B[32m08-20 10:51:33\u001B[0m | \u001B[1mINFO   \u001B[0m | \u001B[36mutils.logger_config\u001B[0m:\u001B[36m_setup_logger\u001B[0m | \u001B[1m🔴 错误日志文件: C:\\Users\\31021\\Desktop\\Quantitative_Trading\\Coding\\Get_Stock_Infos\\logs\\20250820-1_error.log\u001B[0m\n",
+      "\u001B[32m08-20 10:51:33\u001B[0m | \u001B[1mINFO   \u001B[0m | \u001B[36mutils.logger_config\u001B[0m:\u001B[36m_setup_logger\u001B[0m | \u001B[1m📂 项目根目录: C:\\Users\\31021\\Desktop\\Quantitative_Trading\\Coding\\Get_Stock_Infos\u001B[0m\n"
+     ]
+    }
+   ],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T02:51:39.243750Z",
+     "start_time": "2025-08-20T02:51:39.210614Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "conn = easyConnect()",
+   "id": "f298da6421ff062a",
+   "outputs": [],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T02:52:14.103362Z",
+     "start_time": "2025-08-20T02:52:14.041443Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import pandas as pd\n",
+    "sql = pd.read_sql('select * from sw_category', con=conn)"
+   ],
+   "id": "be4b4b83e7df32ef",
+   "outputs": [],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T02:52:59.331657Z",
+     "start_time": "2025-08-20T02:52:59.328398Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "sql['l1_code'].unique().shape",
+   "id": "7e5b481e4a609a0d",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(31,)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T03:02:28.138846Z",
+     "start_time": "2025-08-20T03:02:28.122947Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "temp = pd.read_csv('../assets/250818TO250819.csv')",
+   "id": "73b1a67c1e262dcf",
+   "outputs": [],
+   "execution_count": 14
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T03:03:02.230157Z",
+     "start_time": "2025-08-20T03:03:01.827455Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "temp.to_sql('temp_data', con=conn, if_exists='replace', index=False)",
+   "id": "36d09f275fe925a0",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10823"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 15
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T03:03:50.112685Z",
+     "start_time": "2025-08-20T03:03:50.108776Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "temp['total_mv'].notnull().sum()",
+   "id": "cc27e1b9b25835af",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(10823)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 16
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "b8f8eca012ec5106"
   }
  ],
  "metadata": {
