[Temp Update] fetching logic update v2

--- a/tests/factor_base_test.ipynb
+++ b/tests/factor_base_test.ipynb
@@ -1109,12 +1109,77 @@
    "execution_count": 41
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-22T09:23:44.650526Z",
+     "start_time": "2025-08-22T09:23:44.635823Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import pandas as pd\n",
+    "a = {'a':1,'b':2,'c':3}\n"
+   ],
+   "id": "2a8d97efa9fd3ead",
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'d'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mKeyError\u001B[39m                                  Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[3]\u001B[39m\u001B[32m, line 3\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mpandas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mpd\u001B[39;00m\n\u001B[32m      2\u001B[39m a = {\u001B[33m'\u001B[39m\u001B[33ma\u001B[39m\u001B[33m'\u001B[39m:\u001B[32m1\u001B[39m,\u001B[33m'\u001B[39m\u001B[33mb\u001B[39m\u001B[33m'\u001B[39m:\u001B[32m2\u001B[39m,\u001B[33m'\u001B[39m\u001B[33mc\u001B[39m\u001B[33m'\u001B[39m:\u001B[32m3\u001B[39m}\n\u001B[32m----> \u001B[39m\u001B[32m3\u001B[39m \u001B[38;5;28mtype\u001B[39m(\u001B[43ma\u001B[49m\u001B[43m[\u001B[49m\u001B[33;43m'\u001B[39;49m\u001B[33;43md\u001B[39;49m\u001B[33;43m'\u001B[39;49m\u001B[43m]\u001B[49m)\n",
+      "\u001B[31mKeyError\u001B[39m: 'd'"
+     ]
+    }
+   ],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-22T10:10:11.809762Z",
+     "start_time": "2025-08-22T10:10:10.996756Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import tushare as ts\n",
+    "from utils.utils import easyPro\n",
+    "easyPro()\n",
+    "ts.pro_bar(ts_code='000300.SH',adj='qfq', start_date='20250501',end_date='20250801')"
+   ],
+   "id": "2c30f92f1c7ee32a",
+   "outputs": [],
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-22T10:25:38.920862Z",
+     "start_time": "2025-08-22T10:25:38.918506Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "a = \"1,2,3\"\n",
+    "l = a.split(\",\")"
+   ],
+   "id": "b879a5ff4fa67be6",
+   "outputs": [],
+   "execution_count": 2
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "2a8d97efa9fd3ead"
+   "source": [
+    "b = [1]\n",
+    "b."
+   ],
+   "id": "42e4fe358b4f61cd"
   }
  ],
  "metadata": {
