--- a/tests/python_test.ipynb
+++ b/tests/python_test.ipynb
@@ -130,6 +130,56 @@
    "id": "d4f48f47b2d03b82",
    "outputs": [],
    "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-27T03:47:03.446127Z",
+     "start_time": "2025-08-27T03:47:03.442204Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "a = set([1,2,3,4,5,6,7,8,9])\n",
+    "if 3 in a:\n",
+    "    a.remove(3)\n",
+    "    a.add('p_3')"
+   ],
+   "id": "673ae90d8bb8b5bc",
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-27T03:47:05.172750Z",
+     "start_time": "2025-08-27T03:47:05.168774Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "a",
+   "id": "25fdad93f49b6c12",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 4, 5, 6, 7, 8, 9, 'p_3'}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 2
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "cb9a9e5ba6741855"
   }
  ],
  "metadata": {
